--- a/SimpleListXaml/MainWindow.xaml
+++ b/SimpleListXaml/MainWindow.xaml
@@ -1,12 +1,18 @@
 ﻿<Window x:Class="SimpleListXaml.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SimpleListXaml"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="To-Do List" Height="350" Width="400">
     <Grid>
-        
+        <StackPanel Margin="10">
+            <TextBlock Text="To-Do List" FontSize="16" FontWeight="Bold" Margin="0,0,0,10"/>
+            <ListBox x:Name="TaskListBox" Height="150" />
+
+            <StackPanel Orientation="Horizontal" Margin="0,10,0,0">
+                <TextBox x:Name="TaskInput" Width="250" />
+                <Button Content="Add" Width="50" Margin="10,0,0,0" Click="AddTask_Click"/>
+            </StackPanel>
+
+            <Button Content="Remove Selected" Width="150" Margin="0,10,0,0" Click="RemoveTask_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
